--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-date",
-  "version": "1.2.5",
-  "description": "the mobile jquery date plugin",
+  "version": "1.3.5",
+  "description": "jquery移动端时间插件",
   "main": "jquery.date.js",
   "bin": "jquery.date.js",
   "scripts": {
